[package]
name = "lodge"
version = "0.1.0"
authors = ["Jesse B. Hannah <jesse@jbhannah.net>"]
edition = "2018"
description = "Automatable symbolic link manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.4.0"
dirs = "2.0.2"
ignore = "0.4.11"
