[package]
name = "lodge"
version = "0.2.0"
authors = ["Jesse B. Hannah <jesse@jbhannah.net>"]
edition = "2018"
description = "Automatable symbolic link manager"
license = "MIT"
homepage = "https://github.com/jbhannah/lodge"
repository = "https://github.com/jbhannah/lodge"
documentation = "https://docs.rs/lodge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.1"
crossbeam-channel = "0.4.2"
dirs = "2.0.2"
ignore = "0.4.14"
